--- a/_includes/markdown-enhancements/mermaid.html
+++ b/_includes/markdown-enhancements/mermaid.html
@@ -5,7 +5,8 @@
     mermaid.initialize({
       startOnLoad: true,
       securityLevel: 'loose',
-      theme: 'dark',
+      // theme: 'dark',
+      theme:  'base'
     });
     mermaid.init(undefined, '.language-mermaid');
   }); 
