修改字体颜色

--- a/_includes/markdown-enhancements/mermaid.html
+++ b/_includes/markdown-enhancements/mermaid.html
@@ -5,8 +5,7 @@
     mermaid.initialize({
       startOnLoad: true,
       securityLevel: 'loose',
-      // theme: 'dark',
-      theme:  'base'
+      theme: 'dark',
     });
     mermaid.init(undefined, '.language-mermaid');
   }); 
