增加个人信息

--- a/_includes/article-footer.html
+++ b/_includes/article-footer.html
@@ -77,6 +77,6 @@ source0=layout.license source1=page.license -%}
             src="/assets/js/busuanzi.pure.mini.js"></script>
 
     Total <span id="busuanzi_value_site_pv"></span> views. &ensp;
-    您是Zorch的第 <span id="busuanzi_value_site_uv"></span> 个小伙伴 &ensp;
+    您是Lancer的第 <span id="busuanzi_value_site_uv"></span> 个小伙伴 &ensp;
     <span id="busuanzi_value_page_pv"></span> Hits
 </footer>
